# dependency-remediation-mcp-server

./: .gitignore  CLAUDE.md  README.md  advisory_parser.py  dummy_advisory.xlsx  pyproject.toml  requirements.txt
.claude/skills/remediate-dependencies/: SKILL.md
docs/: dependency-remediation-tool-plan_1.md  mcp-setup.md
examples/spring-boot-sample/: .gitattributes  README.md  RECOVERY.md  SHAKEOUT.md  advisory-breaking.xlsx  advisory.xlsx  make_advisory.py  pom.xml
examples/spring-boot-sample/sample-core/: pom.xml
examples/spring-boot-sample/sample-core/src/main/java/com/example/sample/: GreetingService.java
examples/spring-boot-sample/sample-web/: pom.xml
examples/spring-boot-sample/sample-web/src/test/java/com/example/sample/: SampleApplicationTest.java
examples/spring-boot-sample/src/test/java/com/example/sample/: GreetingServiceTest.java
src/dep_remediation/: __init__.py  cli.py  mcp_server.py
src/dep_remediation/core/: __init__.py  advisory_parser.py  build_runner.py  pom_fixer.py  version_compare.py
tests/: test_build_runner.py  test_mcp_server.py  test_overrides.py  test_pom_fixer.py  test_reactor_fixer.py
tests/fixtures/maven/: build-failure-resolution-cached.txt  build-failure-resolution.txt  build-failure.txt  build-success.txt  dependency-tree-reactor.txt  dependency-tree.txt
tests/fixtures/poms/: direct.xml  managed-parent.xml  property.xml  transitive.xml
tests/fixtures/poms/reactor/: pom.xml
tests/fixtures/poms/reactor/module-app/: pom.xml
tests/fixtures/poms/reactor/module-lib/: pom.xml
